# bazel_sysroot_libarary

./: Makefile  README.md  default.nix  old.default.nix
bazel/: BUILD.bazel
sysroot/: BUILD.bazel  BUILD.sysroot.bazel  sysroot.BUILD
sysroot/lib/: libgcc_s.so.1
