#
# BUILD.bazel
#

package(default_visibility = ["//visibility:public"])

# Main filegroup that includes everything
filegroup(
    name = "all",
    srcs = [
        ":include",
        ":lib",
    ],
)

# Sysroot target that includes all components
filegroup(
    name = "sysroot",
    srcs = [
        ":include",
        ":lib",
        ":system_deps",
        ":system_deps_static",
    ],
)

# Include directory filegroup
filegroup(
    name = "include",
    srcs = glob(["include/**"]),
)

# Library directory filegroup
filegroup(
    name = "lib",
    srcs = glob(["lib/**"]),
)

# Shared library target
cc_library(
    name = "system_deps",
    srcs = glob(["lib/*.so*"]),
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    linkstatic = 0,
    visibility = ["//visibility:public"],
)

# Static library target
cc_library(
    name = "system_deps_static",
    srcs = glob(["lib/*.a"]),
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    linkstatic = 1,
    visibility = ["//visibility:public"],
)