#
# BUILD.bazel
#

package(default_visibility = ["//visibility:public"])

# Main filegroup that includes everything
filegroup(
    name = "all",
    srcs = [
        ":usr",
    ],
)

# Sysroot target that includes all components
filegroup(
    name = "sysroot",
    srcs = [
        ":usr",
    ],
)

# Usr directory filegroup
filegroup(
    name = "usr",
    srcs = [
        ":usr_include",
        ":usr_lib",
    ],
)

# Include directory filegroup
filegroup(
    name = "usr_include",
    srcs = glob(["usr/include/**"]),
)

# Library directory filegroup
filegroup(
    name = "usr_lib",
    srcs = glob(["usr/lib/**"]),
)

# Shared library target
cc_library(
    name = "system_deps",
    srcs = glob(["usr/lib/*.so*"]),
    hdrs = glob(["usr/include/**/*.h"]),
    includes = ["usr/include"],
    linkstatic = 0,
    visibility = ["//visibility:public"],
)

# Static library target
cc_library(
    name = "system_deps_static",
    srcs = glob(["usr/lib/*.a"]),
    hdrs = glob(["usr/include/**/*.h"]),
    includes = ["usr/include"],
    linkstatic = 1,
    visibility = ["//visibility:public"],
)